# LLM-Morphseg-Research

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
v1/: README.md  config.py  how_to_rsync.txt  inference.py  metrics_registry.py  naming.py  prepare_data.py  prompts.py  pyproject.toml  train.py
v1/configs/: infer.yaml  train.yaml
v1/tikhonov/: morphodict-t-test.txt
v2/: .gitignore  last_best_ckpt.txt  pyproject.toml  run_debug.sh  run_train.sh
v2/configs/: config.yaml  debug_predict.yaml  debug_train.yaml  predict.yaml  train.yaml
v2/configs/callback/: default.yaml
v2/configs/callbacks/: debug_hooks.yaml  train_hooks.yaml
v2/configs/datamodule/: base.yaml  debug.yaml  morphology_json.yaml
v2/configs/inference/: default.yaml
v2/configs/inference/dataset/: morphology.yaml
v2/configs/inference/input/: debug.yaml  file.yaml  file_input.yaml
v2/configs/inference/loader/: local.yaml  mlflow.yaml
v2/configs/inference/output/: console.yaml  console_output.yaml  file.yaml  file_output.yaml
v2/configs/logger/: csv.yaml  mlflow.yaml
v2/configs/lora/: rora_base.yaml
v2/configs/model/: debug.yaml  morphseg_module.yaml  tiny-llama.yaml
v2/configs/trainer/: debug.yaml  default.yaml  gpu_base.yaml
v2/configs/training/: default.yaml  run_params.yaml
v2/logs/debug_logs/lightning_logs/version_2/: hparams.yaml
v2/logs/debug_logs/lightning_logs/version_6/: hparams.yaml  metrics.csv
v2/src/: data_module.py  inference.py  predict.py  run_train.sh  train.py
v2/src/datamodules/: base.py  morphology_datamodule.py
v2/src/inference/: pipeline.py  predictor.py
v2/src/inference/dataset/: __init__.py  text_dataset.py
v2/src/inference/input/: __init__.py  file_input.py
v2/src/inference/output/: __init__.py  base.py  console_output.py  file_output.py
v2/src/models/: llm_module.py  morphseg_lightning.py
v2/src/morphseg/: predict.py  train.py
v2/src/morphseg/cli/: __init__.py  train.py
v2/src/morphseg/configs/: inference.yaml  train.yaml
v2/src/morphseg/configs/datamodule/: morphology_json.yaml
v2/src/morphseg/configs/logger/: csv.yaml  mlflow.yaml
v2/src/morphseg/configs/model/: morphseg_module.yaml  smoke.yaml  smoke_inference.yaml
v2/src/morphseg/configs/trainer/: gpu_base.yaml
v2/src/morphseg/datamodules/: __init__.py  morphology_datamodule.py
v2/src/morphseg/datamodules/collators/: __init__.py  (+1 more)
v2/src/morphseg/inference/: __init__.py  pipeline.py  predictor.py
v2/src/morphseg/models/: morphseg_lightning.py
v2/src/morphseg/utils/: __init__.py  metrics.py  utils.py
v2/utils/: metrics.py
(+43 files in other folders)
